Corrected the light mode dark mode problem with the text

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -243,7 +243,7 @@ main {
     visibility: visible;
 }
 .message-popup.open {
-    right: 50px;
+    right: 1%;
     display: flex;
     flex-direction: column;
     height: max-content;
@@ -483,3 +483,34 @@ min-width: 20px;
     }
   }
   
+
+  #CONFIRMDELETE{
+    display: none;
+    position: fixed;
+    box-sizing: border-box;
+    border: 1px solid none;
+    background-color: white;
+    width: 300px;
+    align-self: center;
+    transform: translateY(20dvi);
+    color: black;
+    text-align: center;
+    padding: 2em;
+    border-radius: 15px;
+    box-shadow: 0px 0px 8px 8px rgb(202, 199, 199);
+  }
+  #CONFIRMDELETE button{
+    width: 100px;
+    height: 50px;
+    border-radius: 15px;
+    border: none;
+    font-weight: bolder;
+    cursor: pointer;
+  }
+  .ConfirmBtn{
+    background-color: rgba(255, 30, 0, 0.842);
+    color: white;
+  }
+  .Returnbtn{
+    background-color: rgb(165, 163, 163);
+  }
